--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="login.html">Sign Up</a></li>
             </ul>
             <div class="nav-mobile-menu" id="nav-mobile-menu">
-                <img src="./assets/Hamburger-Menu.svg" alt="">
+                <img src="./Assets/Hamburger-Menu.svg" alt="">
             </div>
         </div>
     </nav>
@@ -64,8 +64,8 @@
                         <a href="#" class="section-1-alt-link">View Examples </a>
                     </div>
                     <ul class="section-1-lists">
-                        <li><img src="./assets/Checkmark.svg" alt=""> <span>No Credit Card Required</span></li>
-                        <li><img src="./assets/Checkmark.svg" alt=""> <span>10 Free Templates</span></li>
+                        <li><img src="./Assets/Checkmark.svg" alt=""> <span>No Credit Card Required</span></li>
+                        <li><img src="./Assets/Checkmark.svg" alt=""> <span>10 Free Templates</span></li>
                     </ul>
                 </div>
                 <div class="section-1-img">
